--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,30 @@
     <title></title>
 </head>
 <body>
-<div th:if="${session.user==null}"><a th:href="@{/login}">登录</a></div><hr>
-<p shiro:hasPermission="user:add"><a th:href="@{/user/add}">add页面</a></p><hr>
-<p shiro:hasPermission="user:update"><a th:href="@{/user/update}">update更新</a></p><hr>
+<!--
+<div th:if="${session.user==null}"><a th:href="@{/login}">登录</a></div><br>
+<div th:if="${session.user!=null}"><a th:href="@{/logout}">登出</a></div><br>
+<p shiro:hasPermission="user:add"><a th:href="@{/user/add}">add页面</a></p><br>
+<p shiro:hasPermission="user:update"><a th:href="@{/user/update}">update更新</a></p><br>
+-->
+
+<center><div th:if="${session.user==null}"><a th:href="@{/login}">登录</a></div><br></center>
+<center><div th:if="${session.user!=null}"><a th:href="@{/logout}">登出</a></div><br></center>
+<ul shiro:hasRole="admin">
+    <li shiro:hasPermission="user:add"><a th:href="@{/user/add}">add增加</a></li>
+    <li shiro:hasPermission="user:delete"><a th:href="@{/user/delete}">delete删除</a></li>
+    <li shiro:hasPermission="user:update"><a th:href="@{/user/update}">update更新</a></li>
+    <li shiro:hasPermission="user:find"><a th:href="@{/user/find}">find查询</a></li>
+</ul>
+<center><h2>以下不需要角色</h2></center>
+<ul>
+    <li shiro:hasPermission="user:add"><a th:href="@{/user/add}">add增加</a></li>
+    <li shiro:hasPermission="user:delete"><a th:href="@{/user/delete}">delete删除</a></li>
+    <li shiro:hasPermission="user:update"><a th:href="@{/user/update}">update更新</a></li>
+    <li shiro:hasPermission="user:find"><a th:href="@{/user/find}">find查询</a></li>
+</ul>
+
+<!--<p ><a th:href="@{/user/add}">add页面</a></p><br>
+<p ><a th:href="@{/user/update}">update更新</a></p><br>-->
 </body>
 </html>
